# EtherBenchFirmware

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  gcc-arm-none-eabi.cmake
bsp/: CMakeLists.txt
bsp/lan8742/: CMakeLists.txt
hal/: CMakeLists.txt
hal/hal/include/: stm32h563xx.h  stm32h5xx_hal.h  stm32h5xx_hal_adc.h  stm32h5xx_hal_adc_ex.h  stm32h5xx_hal_conf.h  stm32h5xx_hal_cortex.h  stm32h5xx_hal_crc.h  stm32h5xx_hal_cryp_ex.h  stm32h5xx_hal_dac_ex.h  stm32h5xx_hal_dcache.h  stm32h5xx_hal_dcmi.h  stm32h5xx_hal_def.h  stm32h5xx_hal_dma.h  stm32h5xx_hal_dma_ex.h  stm32h5xx_hal_eth.h  stm32h5xx_hal_eth_ex.h  stm32h5xx_hal_exti.h  stm32h5xx_hal_fdcan.h  stm32h5xx_hal_flash.h  stm32h5xx_hal_fmac.h  stm32h5xx_hal_gtzc.h  stm32h5xx_hal_hash.h  stm32h5xx_hal_i2c.h  stm32h5xx_hal_i2c_ex.h  stm32h5xx_hal_i3c.h  stm32h5xx_hal_irda.h  stm32h5xx_hal_lptim.h  stm32h5xx_hal_mmc_ex.h  stm32h5xx_hal_opamp_ex.h  stm32h5xx_hal_otfdec.h  stm32h5xx_hal_pwr_ex.h  stm32h5xx_hal_rcc_ex.h  stm32h5xx_hal_rng.h  stm32h5xx_hal_sai.h  stm32h5xx_hal_sd_ex.h  stm32h5xx_hal_sdram.h  stm32h5xx_hal_smartcard.h  stm32h5xx_hal_smbus_ex.h  stm32h5xx_hal_sram.h  stm32h5xx_hal_tim.h  (+22 more)
hal/hal/include/cmsis/: cachel1_armv7.h  cmsis_armclang.h  cmsis_gcc.h  core_armv81mml.h  core_armv8mbl.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm55.h  core_cm7.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h
hal/hal/include/legacy/: stm32_hal_legacy.h
hal/hal/src/: stm32h5xx_hal.c  stm32h5xx_hal_adc.c  stm32h5xx_hal_adc_ex.c  stm32h5xx_hal_cec.c  stm32h5xx_hal_cordic.c  stm32h5xx_hal_crc.c  stm32h5xx_hal_cryp.c  stm32h5xx_hal_cryp_ex.c  stm32h5xx_hal_dac_ex.c  stm32h5xx_hal_dcache.c  stm32h5xx_hal_dma.c  stm32h5xx_hal_dma_ex.c  stm32h5xx_hal_eth_ex.c  stm32h5xx_hal_exti.c  stm32h5xx_hal_fdcan.c  stm32h5xx_hal_gpio.c  stm32h5xx_hal_gtzc.c  stm32h5xx_hal_hash.c  stm32h5xx_hal_i2c.c  stm32h5xx_hal_i2c_ex.c  stm32h5xx_hal_i2s.c  stm32h5xx_hal_icache.c  stm32h5xx_hal_opamp.c  stm32h5xx_hal_opamp_ex.c  stm32h5xx_hal_otfdec.c  stm32h5xx_hal_pcd.c  stm32h5xx_hal_pssi.c  stm32h5xx_hal_pwr.c  stm32h5xx_hal_rcc.c  stm32h5xx_hal_sai.c  stm32h5xx_hal_sai_ex.c  stm32h5xx_hal_sd.c  stm32h5xx_hal_sd_ex.c  stm32h5xx_hal_sdram.c  stm32h5xx_hal_smartcard_ex.c  stm32h5xx_hal_spi.c  stm32h5xx_hal_tim.c  stm32h5xx_hal_tim_ex.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_hal_uart_ex.c  (+15 more)
hal/init/include/: init.h
hal/init/include/peripherals/: adc.h  cordic.h  dcache.h  fmac.h  gpio.h  hash.h  i2c.h  icache.h  octospi.h  pka.h  spi.h  usart.h  usb.h
hal/init/src/: init.c
hal/init/src/peripherals/: cordic.c  dcache.c  eth.c  fdcan.c  fmac.c  gpio.c  hash.c  icache.c  lptim.c  octospi.c  pka.c  spi.c  stm32h5xx_hal_msp.c  tim.c  usart.c  usb.c
src/hal/hal/: CMakeLists.txt
src/hal/hal/include/: stm32h5xx.h  stm32h5xx_hal_cec.h  stm32h5xx_hal_comp.h  stm32h5xx_hal_conf.h  stm32h5xx_hal_cordic.h  stm32h5xx_hal_crc_ex.h  stm32h5xx_hal_cryp.h  stm32h5xx_hal_dac.h  stm32h5xx_hal_dts.h  stm32h5xx_hal_flash_ex.h  stm32h5xx_hal_gpio.h  stm32h5xx_hal_gpio_ex.h  stm32h5xx_hal_hcd.h  stm32h5xx_hal_i2s.h  stm32h5xx_hal_i2s_ex.h  stm32h5xx_hal_icache.h  stm32h5xx_hal_irda_ex.h  stm32h5xx_hal_iwdg.h  stm32h5xx_hal_mmc.h  stm32h5xx_hal_nand.h  stm32h5xx_hal_nor.h  stm32h5xx_hal_opamp.h  stm32h5xx_hal_pcd.h  stm32h5xx_hal_pcd_ex.h  stm32h5xx_hal_pka.h  stm32h5xx_hal_pssi.h  stm32h5xx_hal_pwr.h  stm32h5xx_hal_ramcfg.h  stm32h5xx_hal_rcc.h  stm32h5xx_hal_rng_ex.h  stm32h5xx_hal_rtc.h  stm32h5xx_hal_rtc_ex.h  stm32h5xx_hal_sai_ex.h  stm32h5xx_hal_sd.h  stm32h5xx_hal_sdio.h  stm32h5xx_hal_smartcard_ex.h  stm32h5xx_hal_smbus.h  stm32h5xx_hal_spi.h  stm32h5xx_hal_tim_ex.h  stm32h5xx_hal_uart_ex.h  (+21 more)
src/hal/hal/src/: stm32h5xx_hal_comp.c  stm32h5xx_hal_cortex.c  stm32h5xx_hal_crc_ex.c  stm32h5xx_hal_dac.c  stm32h5xx_hal_dcmi.c  stm32h5xx_hal_dts.c  stm32h5xx_hal_eth.c  stm32h5xx_hal_flash.c  stm32h5xx_hal_flash_ex.c  stm32h5xx_hal_fmac.c  stm32h5xx_hal_hcd.c  stm32h5xx_hal_i2s_ex.c  stm32h5xx_hal_i3c.c  stm32h5xx_hal_irda.c  stm32h5xx_hal_iwdg.c  stm32h5xx_hal_lptim.c  stm32h5xx_hal_mmc.c  stm32h5xx_hal_mmc_ex.c  stm32h5xx_hal_nand.c  stm32h5xx_hal_nor.c  stm32h5xx_hal_pcd_ex.c  stm32h5xx_hal_pka.c  stm32h5xx_hal_pwr_ex.c  stm32h5xx_hal_ramcfg.c  stm32h5xx_hal_rcc_ex.c  stm32h5xx_hal_rng.c  stm32h5xx_hal_rng_ex.c  stm32h5xx_hal_rtc.c  stm32h5xx_hal_rtc_ex.c  stm32h5xx_hal_sdio.c  stm32h5xx_hal_smartcard.c  stm32h5xx_hal_smbus.c  stm32h5xx_hal_smbus_ex.c  stm32h5xx_hal_spi_ex.c  stm32h5xx_hal_sram.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_hal_uart.c  stm32h5xx_hal_usart_ex.c  stm32h5xx_hal_wwdg.c  stm32h5xx_hal_xspi.c  (+17 more)
src/hal/init/: CMakeLists.txt
src/hal/system/: CMakeLists.txt
src/hal/system/src/: syscalls.c
src/launcher/: CMakeLists.txt
src/launcher/include/: launcher.h
src/tasks/: CMakeLists.txt
src/tasks/configuration/: CMakeLists.txt
src/tasks/files/: CMakeLists.txt
src/tasks/hardware/: CMakeLists.txt
src/tasks/inet/: CMakeLists.txt
src/tasks/leds/: CMakeLists.txt
src/tasks/leds/config/: gamma_lut.toml
src/tasks/leds/include/: task_leds.h
src/tasks/leds/scripts/: generate_gamma_lut.py
src/tasks/leds/src/: task_leds.cpp
src/tasks/logger/src/: task_logger.cpp
src/tasks/parser/scripts/: generate_gperf.py
src/tasks/parser/src/: task_parser.cpp
src/tasks/sequences/: CMakeLists.txt
src/tasks/shell/: CMakeLists.txt
src/tasks/shell/include/: task_shell.h
src/tasks/usb/: CMakeLists.txt
src/threadx/: CMakeLists.txt
src/threadx/threadx/: CMakeLists.txt
src/threadx/usbx/: CMakeLists.txt
tasks/logger/: CMakeLists.txt
tasks/logger/include/: logger.h
tasks/muxer/: CMakeLists.txt
tasks/parser/: CMakeLists.txt
tasks/parser/config/: commands.toml
tasks/parser/gperf/: keywords.gperf
tasks/parser/include/: task_parser.h
tasks/programmer/: CMakeLists.txt
tasks/programmer/CMSIS-DAP/include/: DAP_config.h
tasks/programmer/include/Programmer/: Programmer.hpp
threadx/levelx/: CMakeLists.txt
threadx/levelx/app/include/: lx_user.h
(+1754 files in other folders)
