#############################################################################################################################
# file:  hal/startup/CMakeLists.txt
# brief: System init build files
# 
# author : l.heywang <leonard.heywang@proton.me>
# date : 20/02/2026
#############################################################################################################################

# Set sources
set(SOURCES 
	src/stm32h5xx_hal.c
    src/stm32h5xx_hal_adc.c
    src/stm32h5xx_hal_adc_ex.c
    src/stm32h5xx_hal_cec.c
    src/stm32h5xx_hal_comp.c
    src/stm32h5xx_hal_cordic.c
    src/stm32h5xx_hal_cortex.c
    src/stm32h5xx_hal_crc.c
    src/stm32h5xx_hal_crc_ex.c
    src/stm32h5xx_hal_cryp.c
    src/stm32h5xx_hal_cryp_ex.c
    src/stm32h5xx_hal_dac.c
    src/stm32h5xx_hal_dac_ex.c
    src/stm32h5xx_hal_dcache.c
    src/stm32h5xx_hal_dcmi.c
    src/stm32h5xx_hal_dma.c
    src/stm32h5xx_hal_dma_ex.c
    src/stm32h5xx_hal_dts.c
    src/stm32h5xx_hal_eth.c
    src/stm32h5xx_hal_eth_ex.c
    src/stm32h5xx_hal_exti.c
    src/stm32h5xx_hal_fdcan.c
    src/stm32h5xx_hal_flash.c
    src/stm32h5xx_hal_flash_ex.c
    src/stm32h5xx_hal_fmac.c
    src/stm32h5xx_hal_gpio.c
    src/stm32h5xx_hal_gtzc.c
    src/stm32h5xx_hal_hash.c
    src/stm32h5xx_hal_hcd.c
    src/stm32h5xx_hal_i2c.c
    src/stm32h5xx_hal_i2c_ex.c
    src/stm32h5xx_hal_i2s.c
    src/stm32h5xx_hal_i2s_ex.c
    src/stm32h5xx_hal_i3c.c
    src/stm32h5xx_hal_icache.c
    src/stm32h5xx_hal_irda.c
    src/stm32h5xx_hal_iwdg.c
    src/stm32h5xx_hal_lptim.c
    src/stm32h5xx_hal_mmc.c
    src/stm32h5xx_hal_mmc_ex.c
    src/stm32h5xx_hal_nand.c
    src/stm32h5xx_hal_nor.c
    src/stm32h5xx_hal_opamp.c
    src/stm32h5xx_hal_opamp_ex.c
    src/stm32h5xx_hal_otfdec.c
    src/stm32h5xx_hal_pcd.c
    src/stm32h5xx_hal_pcd_ex.c
    src/stm32h5xx_hal_pka.c
    src/stm32h5xx_hal_pssi.c
    src/stm32h5xx_hal_pwr.c
    src/stm32h5xx_hal_pwr_ex.c
    src/stm32h5xx_hal_ramcfg.c
    src/stm32h5xx_hal_rcc.c
    src/stm32h5xx_hal_rcc_ex.c
    src/stm32h5xx_hal_rng.c
    src/stm32h5xx_hal_rng_ex.c
    src/stm32h5xx_hal_rtc.c
    src/stm32h5xx_hal_rtc_ex.c
    src/stm32h5xx_hal_sai.c
    src/stm32h5xx_hal_sai_ex.c
    src/stm32h5xx_hal_sd.c
    src/stm32h5xx_hal_sd_ex.c
    src/stm32h5xx_hal_sdio.c
    src/stm32h5xx_hal_sdram.c
    src/stm32h5xx_hal_smartcard.c
    src/stm32h5xx_hal_smartcard_ex.c
    src/stm32h5xx_hal_smbus.c
    src/stm32h5xx_hal_smbus_ex.c
    src/stm32h5xx_hal_spi.c
    src/stm32h5xx_hal_spi_ex.c
    src/stm32h5xx_hal_sram.c
    src/stm32h5xx_hal_tim.c
    src/stm32h5xx_hal_tim_ex.c
    src/stm32h5xx_hal_timebase_tim.c
    src/stm32h5xx_hal_uart.c
    src/stm32h5xx_hal_uart_ex.c
    src/stm32h5xx_hal_usart.c
    src/stm32h5xx_hal_usart_ex.c
    src/stm32h5xx_hal_wwdg.c
    src/stm32h5xx_hal_xspi.c
    src/stm32h5xx_ll_adc.c
    src/stm32h5xx_ll_comp.c
    src/stm32h5xx_ll_cordic.c
    src/stm32h5xx_ll_crc.c
    src/stm32h5xx_ll_crs.c
    src/stm32h5xx_ll_dac.c
    src/stm32h5xx_ll_dlyb.c
    src/stm32h5xx_ll_dma.c
    src/stm32h5xx_ll_exti.c
    src/stm32h5xx_ll_fmac.c
    src/stm32h5xx_ll_fmc.c
    src/stm32h5xx_ll_gpio.c
    src/stm32h5xx_ll_i2c.c
    src/stm32h5xx_ll_i3c.c
    src/stm32h5xx_ll_icache.c
    src/stm32h5xx_ll_lptim.c
    src/stm32h5xx_ll_lpuart.c
    src/stm32h5xx_ll_opamp.c
    src/stm32h5xx_ll_pka.c
    src/stm32h5xx_ll_pwr.c
    src/stm32h5xx_ll_rcc.c
    src/stm32h5xx_ll_rng.c
    src/stm32h5xx_ll_rtc.c
    src/stm32h5xx_ll_sdmmc.c
    src/stm32h5xx_ll_spi.c
    src/stm32h5xx_ll_tim.c
    src/stm32h5xx_ll_ucpd.c
    src/stm32h5xx_ll_usart.c
    src/stm32h5xx_ll_usb.c
    src/stm32h5xx_ll_utils.c
    src/stm32h5xx_util_i3c.c
)

# Creating the library
add_library(ST_HAL STATIC ${SOURCES})

# Adding the include folder
target_include_directories(ST_HAL PUBLIC 
	${CMAKE_CURRENT_SOURCE_DIR}/include/
	${CMAKE_CURRENT_SOURCE_DIR}/include/legacy/
	${CMAKE_CURRENT_SOURCE_DIR}/include/cmsis/
)
